go/k8s/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: seolmyeongtang-issuer-staging
    traefik.ingress.kubernetes.io/router.middlewares: argocd-ip-whitelist@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - tools.redundant4u.com
    secretName: tools-redundant4u-tls-secret
  rules:
  - host: tools.redundant4u.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
